# object_tracking

./: .gitignore  README.md  ReadMe.txt  package.xml  requirements.txt  setup.py
docs/architecture/: README.md
launch/: sam_node.launch.py  sam_node_continuous.launch.py
object_tracking/: capture_target_overlay.py  clip_image_segmentation.py  dino_mobilesam_image_segmentation.py  download_florence2_model.py  florence2_image_segmentation.py  image_segmentation.py  rgb_tracker_node.py  setup.py  tracker_node.py  yoloe_image_segmentation.py
object_tracking/launch/: sam_node.launch.py
object_tracking/object_tracking/: clip_image_segmentation.py  detect_target_server.py  rgb_tracker_node.py  setofmark.py  tracker_node.py  yoloe_image_segmentation.py
object_tracking/test/: flake8.ini  test_setofmark.py
object_tracking_msgs/: CMakeLists.txt  package.xml
object_tracking_msgs/action/: DetectTarget.action  SeekObject.action
object_tracking_msgs/msg/: AtomicAction.msg  Candidate.msg  Notes.msg  PlanStep.msg
planner_orchestrator/: package.xml  setup.cfg  setup.py  vlm.env.example
planner_orchestrator/planner_orchestrator/: orchestration.py  orchestrator_node.py  planner_logic.py  vlm_client.py
planner_orchestrator/test/: test_orchestration.py  test_planner_logic.py  test_vlm_client.py
test/: test_flake8.py
