<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planner_orchestrator</name>
  <version>0.0.0</version>
  <description>Edge-side planner orchestrator: lightweight async HTTP client to an external OpenAI-compatible VLM API (no local model/GPU). Single-in-flight, UUID idempotency, p99 timeout, circuit-breaker, enum tool-call, notes buffer, anytime/async replan. Phase 1.6 scaffold.</description>
  <maintainer email="dnbabkov@gmail.com">clv</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>fleet_comms</depend>
  <depend>object_tracking_msgs</depend>
  <depend>ar_project_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
